# openGLcpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  gl1.cbp  gl1.depend  main.cpp
include/: Camera.h  Shader.h  shader.h
include/glad/: glad.h
libs/: glad.c  stb_image.h
shaders/: fshader1.frag  fshader2.frag  fshader3.frag  objects.frag  objects.vert  vshader.vert
src/: Camera.cpp  Shader.cpp  camera.cpp  glad.c  main.cpp  shader.cpp  shader.h
